# blog

./: .gitignore  pyproject.toml
.github/workflows/: main.yml  publish.yml
docs/: CNAME  index.html  objects.inv  searchindex.js
docs/2012/05/first_post/: index.html
docs/2012/05/risk_intelligence/: index.html
docs/2012/05/troubles_with_openvpn/: index.html
docs/2012/06/debian_on_android/: index.html
docs/2012/06/openvpn-update-fixed/: index.html
docs/2012/06/pydroid_at_last/: index.html
docs/2012/08/the_internet_is_so_awesome/: index.html
docs/2012/11/downgraded_to_python_2.7.1/: index.html
docs/genindex/: index.html
docs/posts/: atom.xml  index.html
docs/posts/2012/: index.html
docs/posts/2013/: index.html
docs/posts/2015/: index.html
docs/posts/2016/: index.html
docs/posts/2017/: index.html
docs/posts/2022/: index.html
docs/posts/archive/: index.html
docs/posts/drafts/: index.html
docs/posts/tag/: index.html
docs/search/: index.html
src/: conf.py  index.rst
src/2012/05/: risk_intelligence.md  troubles_with_openvpn.md
src/2012/06/: debian_on_android.md  openvpn-update-fixed.md  pydroid_at_last.md
src/2012/11/: downgraded_to_python_2.7.1.md
src/2013/05/: getting_into_developer_mode.md
src/2013/10/: last_straw_for_excel.md
src/2015/01/: fixing_repo_init_chromium_os.md
src/2016/01/: n_dimensional_latex.md
src/2016/02/: check_out_old_chromium.md
src/2016/03/: using_git_stash_staged_changes.md
src/2017/06/: goodbye_blogger.md
src/2017/08/: ecryptfs_filenames.md
src/2022/09/: nmm.rst
(+29 files in other folders)
